--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,5 +41,7 @@
   "python.linting.mypyCategorySeverity.note": "Warning",
   "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
   "mypy.executable": "C:\\Users\\Ben\\AppData\\Local\\Programs\\Python\\Python38-32\\Scripts\\mypyls.exe",
-  "workbench.colorTheme": "Default Light+"
+  "workbench.colorTheme": "Default Light+",
+  "files.eol": "\n",
+  "files.insertFinalNewline": true
 }
