--- a/setup.cfg
+++ b/setup.cfg
@@ -1,21 +1,22 @@
 [pycodestyle]
 count = true
-max_line_length = 80
+max_line_length = 120
 exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,venv
 
 [flake8]
-max-line-length = 80
+max-line-length = 120
 exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,venv,.mypy_cache
+inline-quotes = double
 
 [isort]
-line_length = 80
+line_length = 120
 
 [yapf]
 based_on_style = google
 ALIGN_CLOSING_BRACKET_WITH_VISUAL_INDENT = true
 ALLOW_MULTILINE_LAMBDAS = true
 COALESCE_BRACKETS = true
-COLUMN_LIMIT = 80
+COLUMN_LIMIT = 120
 JOIN_MULTIPLE_LINES = true
 SPACES_BEFORE_COMMENT = 2
 SPLIT_BEFORE_DICT_SET_GENERATOR = true
