--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "editor.formatOnSave": true,
     "editor.tabSize": 4,
     "editor.detectIndentation": false,
-    "python.defaultInterpreterPath": "venv\\Scripts\\python.exe",
+    "python.defaultInterpreterPath": "conda\\python.exe",
     "[python]": {
         "editor.formatOnSaveMode": "file",
         "editor.formatOnSave": true,
@@ -41,7 +41,7 @@
         "**/__pycache__": true,
         "**/venv": true
     },
-    "workbench.colorTheme": "Default Light+",
+    "workbench.colorTheme": "Default Dark Modern",
     "files.eol": "\n",
     "files.insertFinalNewline": true
 }
