--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
-Flask==1.1.1
-scipy>=0.17.0
-nose>=1.3.7
+#scipy>=0.17.0
+#nose>=1.3.7
 pymeshlab
+polyscope
+ezdxf
 
 # Dev:
+Flask==1.1.1
 flake8
 flake8-quotes
 flake8-isort
 pyfakefs==3.6.1
 pytest-env
-
 pycodestyle
 black
-pymeshlab
-ezdxf
